<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Parent-POM: OGEMA Apps master pom with project-wide settings -->
    <parent>
        <groupId>org.ogema.tools</groupId>
        <artifactId>ogema-tools</artifactId>
        <version>2.2.1</version>
    </parent>

    <groupId>org.ogema.widgets</groupId>
    <artifactId>ogema-widgets</artifactId>
    <version>2.2.2-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>OGEMA Tools :: Widgets</name>

    <scm>
		<connection>scm:git@github.com:smartrplace/ogema-widgets</connection>
		<developerConnection>scm:git@github.com:smartrplace/ogema-widgets</developerConnection>
		<url>scm:git@github.com:smartrplace/ogema-widgets</url>
	</scm>
    
    <distributionManagement>
        <repository>
            <uniqueVersion>false</uniqueVersion>
            <id>sp-central</id>
            <name>Smartrplace Repository</name>
            <url>https://repository.smartrplace.de/artifactory/libs-release</url>
            <layout>default</layout>
        </repository>
        <snapshotRepository>
            <uniqueVersion>true</uniqueVersion>
            <id>sp-snapshots</id>
            <name>Smartrplace Snapshots</name>
            <url>https://repository.smartrplace.de/artifactory/libs-snapshot</url>
            <layout>default</layout>
        </snapshotRepository>
    </distributionManagement>


	    <!-- Sub-projects: OGEMA Applications (in alphabetical order) -->
    <modules>
    	<module>icon-service-impl</module>
		<module>lazy-pages-service</module>
		<module>messaging</module>
		<module>name-service-impl</module>
		<module>ogema-gui-api</module>
		<module>ogema-js-bundle</module>
	    <module>simulations</module>
		<module>timeseries-tools</module>
	 	<module>util-extended</module>
	 	<module>widget-apps</module> 
		<module>widget-collection</module>
	 	<module>widget-exam-base</module>
		<module>widget-experimental</module>
		<module>widget-extended</module>
		<module>widget-models-proposed</module>
	    <module>widget-tools</module>
	    <module>utils-experimental</module>
  </modules>

    <profiles>
    		<!--
				Use the following command to create javadoc for the API bundles only. Note the dot at the end for the current project.
				Unfortunately, the bundles to be inclduded cannot easily be specified at pom level:

				 mvn -DskipTests -Pgenerate-javadoc -Dadditionalparam=-Xdoclint:none -Dauthor=false install -pl ogema-gui-api,ogema-js-bundle,widget-collection,widget-extended,util-extended,widget-experimental,simulations/simulation-service,simulations/roomsimulation-service,simulations/composite-sim-service,timeseries-tools/timeseries-api-extended,.
			 -->
    		<profile>
			<id>generate-javadoc</id>
			<build>
				<plugins>
					<!-- Javadoc Plugin -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<!-- does not allow for linebreaks, neither to put the configuration in the affected submodules... -->
						  <excludePackageNames>
		          			de.iwes.widgets.api.extended.impl:de.iwes.widgets.api.extended.xxx:de.iwes.widgets.messaging.impl:de.iwes.widgets.messaging.model:de.iwes.widgets.start:de.iwes.widgets.html.start:de.iwes.widgets.pattern.page.impl:de.iwes.widgets.experimental.general:org.ogema.tools.simulation.service.impl:org.ogema.tools.simulation.service.apiplusv1:de.iwes.sim.roomsimservice:de.iwes.sim.roomsimservice.logic:de.iwes.sim.roomsimservice.device:org.ogema.apps.roomsim.service.api.impl
		          		  </excludePackageNames>
				          <links>
				            <link>https://www.ogema-source.net/apidocs/</link>
				          </links>
				          <detectLinks>true</detectLinks>
				        </configuration>
				        <executions>
				          <execution>
				            <id>aggregate</id>
				            <goals>
				              <goal>aggregate</goal>
				            </goals>
				             <phase>install</phase>
				          </execution>
				        </executions>
					</plugin>
				</plugins>
			</build>
		</profile>
 <!-- disable doclint (strict Javadoc checks); alternatively, use command line argument -Dadditionalparam=-Xdoclint:none -->
 <!--
 	    <profile>
	        <id>disable-java8-doclint</id>
	        <activation>
	            <jdk>[1.8,)</jdk>
	        </activation>
	        <properties>
	            <additionalparam>-Xdoclint:none</additionalparam>
	        </properties>
	    </profile>
-->
		<profile>
            <id>java7</id><!-- java versions < 9 -->
            <activation>
                <!--
                note: not using <jdk> due to a bug in our ancient ci server
                    <jdk>[1.7,1.9)</jdk>
                -->
                <file>
                    <missing>${java.home}/jmods</missing>
                </file>
            </activation>
            <properties>
                <surefire-args>
                    -ea
                </surefire-args>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>
                                ${surefire-args}
                            </argLine>
                            <trimStackTrace>false</trimStackTrace>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>java9</id><!-- java versions 9 and greater -->
            <activation>
                <!-- 
                note: not using <jdk> due to a bug in our ancient ci server
                    <jdk>[9,)</jdk>
                -->
                <file>
                    <exists>${java.home}/jmods</exists>
                </file>
            </activation>
            <properties>
                <surefire-args>
                    -ea
                    --illegal-access=warn
                    --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
                    --add-modules java.xml.bind,java.xml.ws.annotation
                </surefire-args>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>
                                ${surefire-args}
                            </argLine>
                            <trimStackTrace>false</trimStackTrace>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
	</profiles>
	<build>
		<pluginManagement>
        	<plugins>
	       		<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<showDeprecation>true</showDeprecation>
						<showWarnings>true</showWarnings>
						<compilerArgs>
							<arg>-Xlint</arg>
						</compilerArgs>
					</configuration>
				</plugin>
        	</plugins>
        </pluginManagement>
    </build>

	<dependencyManagement>
		<dependencies>
			<dependency>
	            <groupId>org.ogema.widgets</groupId>
	            <artifactId>ogema-gui-api</artifactId>
	            <version>2.2.2-SNAPSHOT</version>
        	</dependency>
        	<dependency>
	            <groupId>org.ogema.widgets</groupId>
	            <artifactId>ogema-js-bundle</artifactId>
	            <version>2.2.2-SNAPSHOT</version>
        	</dependency>
        	<dependency>
	            <groupId>org.ogema.widgets</groupId>
	            <artifactId>widget-collection</artifactId>
	            <version>2.2.2-SNAPSHOT</version>
        	</dependency>
        	<dependency>
	            <groupId>org.ogema.widgets</groupId>
	            <artifactId>widget-extended</artifactId>
	            <version>2.2.2-SNAPSHOT</version>
        	</dependency>
        	<dependency>
	            <groupId>org.ogema.widgets</groupId>
	            <artifactId>widget-experimental</artifactId>
	            <version>2.2.2-SNAPSHOT</version>
        	</dependency>
        	<dependency>
	            <groupId>org.ogema.widgets</groupId>
	            <artifactId>util-extended</artifactId>
	            <version>2.2.2-SNAPSHOT</version>
        	</dependency>
        	<dependency>
	            <groupId>org.ogema.tools</groupId>
	            <artifactId>standard-patterns</artifactId>
	            <version>2.2.2-SNAPSHOT</version>
        	</dependency>
        	<dependency>
	            <groupId>org.ogema.widgets</groupId>
	            <artifactId>widget-exam-base</artifactId>
	            <version>2.2.2-SNAPSHOT</version>
        	</dependency>
			<dependency>
				<groupId>org.json</groupId>
				<artifactId>json</artifactId>
				<version>20170516</version>
			</dependency>
			<dependency>
	        	<groupId>org.apache.felix</groupId>
	        	<artifactId>org.apache.felix.framework</artifactId>
	        	<version>5.6.10</version>
	        </dependency>
		</dependencies>
	</dependencyManagement>
</project>
